2008-08-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-itmedia.el (shimbun-clear-contents): Divide too complicated regexp
	into pieces.  Reported by NOMIYA Masaru <nomiya@galaxy.dti.ne.jp>;
	don't remove article icon.

2008-07-23  David Hansen  <david.hansen@gmx.net>

	* sb-heise.el (shimbun-heise-get-newsticker-headers): Follow new page
	layout.

2008-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-break-long-japanese-lines): Fix position to break.

2008-07-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-multi-next-url): Remove useless
	non-global variables.

2008-07-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-multi-next-url): Don't insert page
	delimiter here; remove garbage at the end of pages.
	(shimbun-asahi-multi-clear-contents): New function; insert page
	delimiter.

2008-07-15  David Engster  <dengste@eml.cc>

	* sb-heise.el (shimbun-heise-get-newsticker-headers): Fix regexp.

2008-07-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi): Use shimbun-multi.
	(shimbun-asahi-multi-next-url): New function.
	(shimbun-asahi-prepare-article): Move some programs that clean contents
	to shimbun-asahi-clear-contents.
	(shimbun-asahi-clear-contents): New function.

2008-07-07  David Hansen  <david.hansen@gmx.net>

	* sb-heise.el (shimbun-heise-content-start)
	(shimbun-heise-content-end): Updated regexp.
	(shimbun-heise-wash-newsticker-article): Update ad filtering.

2008-06-27  David Engster  <dengste@eml.cc>

	* sb-heise.el (shimbun-heise-content-start)
	(shimbun-heise-content-end): Updated regexps.

2008-06-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-text-content-start)
	(shimbun-asahi-text-content-end): Update.
	(shimbun-asahi-prepare-article): Update regexp matching useless links;
	add line breaks around images.

2008-06-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-content-end): Update.