@@ -1,3 +1,7 @@
+2008-08-07  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-asahi.el (shimbun-asahi-clear-contents): Remove zoom buttons.
+
 2008-08-04  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* sb-itmedia.el (shimbun-clear-contents): Divide too complicated regexp
